# grace

./: .gitignore  BlockNode.cc  CMakeLists.txt  Codegen.cc  Context.cc  Driver.cc  LiteralIntNode.cc  Log.cc  Makefile  Parser.yy  README.md  Scanner.ll  SymbolTable.cc  Type.cc  main.cc  test.txt
examples/: bubble_sort.gr  for_sum.gr  function_test.gr  if_then_else.gr  operations_test.gr  test.cz  undeclaredVar.cz  variable_test.gr
examples/correct/: fat.gr  fib.gr  sum.gr  while_sum.gr
examples/failure/: decl_error.gr  error.gr  error2.gr  function_test.gr  if_then_else.gr  operations_test.gr
include/: AST.hh  BinOp.hh  Context.hh  Driver.hh  Error.hh  Log.hh  Operators.hh  SymbolTable.hh  Type.hh  Types.hh  location.hh
src/: ast.hh  context.hh  driver.cc  driver.hh  location.hh  main.cc  parser.yy  position.hh  scanner.ll  stack.hh  utils.hh
